--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "discord-bot-mirai",
+  "version": "1.0.0",
+  "description": "a bot for discord that can talk to cleverbot and do other things",
+  "main": "Index.js",
+  "author": "Joseph Wolf",
   "dependencies": {
     "cleverbot-node": "^0.2.7",
     "discord.js": "^11.0.0"
+  }
+  "engines": {
+    "node": "6.9.5"
   }
 }
