--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Joseph Wolf",
   "dependencies": {
     "cleverbot-node": "^0.2.7",
-    "discord.js": "^11.0.0"
+    "discord.js": "^11.0.0",
+    "cron": "1.2.1"
   },
   "engines": {
     "node": "6.9.5"
