updating bot token

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"Discord": {
-		"Token":"Mjc5NzM0OTEyODU1MzEwMzM2.C3_RCA.5VHWcDkch33AqcqynQfXJQT8uBU"
-		},
+  "Discord": {
+    "Token": "Mjc5NzM0OTEyODU1MzEwMzM2.C4TGtg.2KVEyCCGus0lBER9kiyfUUAFVQA"
+  },
 		"Cleverbot": {
 			"APIKey": "0522640454866a0e03659c924fe5b28c"
 			},
