--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "author": "Joseph Wolf",
   "dependencies": {
-    "cleverbot-node": "^0.2.7",
+    "cron": "1.2.1",
     "discord.js": "^11.0.0",
-    "cron": "1.2.1"
+    "http": "0.0.0",
+    "querystring": "^0.2.0"
   },
   "engines": {
     "node": "6.9.5"
