--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "cleverbot": "^1.0.1",
     "cron": "1.2.1",
-    "discord.js": "^11.0.0"
+    "discord.js": "^11.0.0",
+    "http": "0.0.0"
   },
   "engines": {
     "node": "6.9.5"
