--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "http": "0.0.0",
     "is-invalid-path": "^0.1.0",
     "nedb": "^1.8.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "readline": "^1.3.0"
   },
   "engines": {
     "node": "6.9.5"
