--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "cleverbot.io": "CleverbotIO/node-cleverbot.io#8746180",
     "cron": "1.2.1",
     "discord.js": "^11.0.0",
-    "http": "0.0.0",
     "is-invalid-path": "^0.1.0",
     "nedb": "^1.8.0",
     "path": "^0.12.7",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "request": "^2.81.0"
   },
   "engines": {
     "node": "6.9.5"
