Switching over to better-cleverbot-io because it doesn't crash when a request times out. I also don't need to pull the npm package directly from GitHub to get the latest patches... Still trying to figure out why cleverbot.io is timing out.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "author": "Joseph Wolf",
   "dependencies": {
+    "better-cleverbot-io": "^1.0.2",
     "cat-facts": "^1.0.2",
-    "cleverbot.io": "CleverbotIO/node-cleverbot.io#8746180",
     "cron": "1.2.1",
     "discord.js": "^11.2.1",
     "dog-facts": "^1.0.3",
