--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^11.2.1",
     "dog-facts": "^1.0.3",
     "dotenv": "^4.0.0",
+    "express": "^4.16.2",
     "is-positive-integer": "^1.1.1",
     "mongodb": "^2.2.33",
     "prompt": "^1.0.0",
